@@ -1,3 +1,8 @@
+2004-07-02 Alain Magloire
+
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/ProcessManager.java
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/ThreadManager.java
+
 2004-06-29 Alain Magloire
 
 	When selecting threads gdb can reset the current
